--- a/app/src/main/res/layout/powerball_listview.xml
+++ b/app/src/main/res/layout/powerball_listview.xml
@@ -1,104 +1,225 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView17"
+        app:layout_constraintTop_toBottomOf="@+id/guideline5"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="56dp" />
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/guideline5"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="56dp" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView15"
+        app:layout_constraintTop_toBottomOf="@+id/guideline5"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="56dp" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/guideline5"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="56dp" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline5"
+        app:srcCompat="@drawable/ball"
+        tools:layout_editor_absoluteY="56dp" />
+
+    <SurfaceView
+        android:id="@+id/surfaceView3"
+        android:layout_width="55dp"
+        android:layout_height="39dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintLeft_toRightOf="@+id/imageView18"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvGameName"
-        android:layout_alignBottom="@+id/tvGameName"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_marginEnd="53dp"
         android:layout_marginRight="53dp"
         android:text="*Date*"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvGameName"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvGameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="16dp"
         android:text="Powerball"
         android:textSize="18sp"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvGameName"
-        android:layout_alignStart="@+id/tvGameName"
-        android:layout_below="@+id/tvGameName"
-        android:layout_marginTop="20dp"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView14"
+        app:layout_constraintRight_toLeftOf="@+id/imageView15"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvBall1"
-        android:layout_marginLeft="23dp"
-        android:layout_marginStart="23dp"
-        android:layout_toEndOf="@+id/tvBall1"
-        android:layout_toRightOf="@+id/tvBall1"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView15"
+        app:layout_constraintRight_toLeftOf="@+id/imageView16"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/tvBall3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvBall2"
-        android:layout_marginLeft="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_toEndOf="@+id/tvBall2"
-        android:layout_toRightOf="@+id/tvBall2"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView16"
+        app:layout_constraintRight_toLeftOf="@+id/imageView17"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tvBall3"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_toEndOf="@+id/tvGameName"
-        android:layout_toRightOf="@+id/tvGameName"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView17"
+        app:layout_constraintRight_toLeftOf="@+id/imageView18"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvBall1"
-        android:layout_alignStart="@+id/tvBall1"
-        android:layout_below="@+id/tvBall1"
-        android:layout_marginTop="25dp"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView18"
+        app:layout_constraintRight_toRightOf="@+id/imageView18"
+        app:layout_constraintTop_toTopOf="@+id/guideline5"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvPowerball"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tvBall2"
-        android:layout_alignStart="@+id/tvBall2"
-        android:layout_alignTop="@+id/tvBall5"
-        android:text="$" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/surfaceView3"
+        app:layout_constraintLeft_toLeftOf="@+id/surfaceView3"
+        app:layout_constraintRight_toRightOf="@+id/surfaceView3"
+        app:layout_constraintTop_toTopOf="@+id/surfaceView3"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvPowerplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:text="$"
-        android:layout_alignBaseline="@+id/tvPowerball"
-        android:layout_alignBottom="@+id/tvPowerball"
-        android:layout_alignLeft="@+id/tvBall3"
-        android:layout_alignStart="@+id/tvBall3" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintLeft_toRightOf="@+id/textView3"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
-</RelativeLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="495dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
+        android:text="Powerplay:"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGameName" />
+
+</android.support.constraint.ConstraintLayout>
