--- a/app/src/main/res/layout/cash5_listview.xml
+++ b/app/src/main/res/layout/cash5_listview.xml
@@ -2,138 +2,156 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
-        app:srcCompat="@drawable/ball"
         android:id="@+id/imageView4"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignTop="@+id/ivBall2"
+        android:layout_toEndOf="@+id/ivBall2"
         android:layout_toRightOf="@+id/ivBall2"
-        android:layout_toEndOf="@+id/ivBall2"/>
+        app:srcCompat="@drawable/ball" />
 
     <ImageView
-        app:srcCompat="@drawable/ball"
         android:id="@+id/ivBall2"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignTop="@+id/ivBall1"
+        android:layout_toEndOf="@+id/ivBall1"
         android:layout_toRightOf="@+id/ivBall1"
-        android:layout_toEndOf="@+id/ivBall1"/>
+        app:srcCompat="@drawable/ball" />
 
     <ImageView
-        app:srcCompat="@drawable/ball"
         android:id="@+id/ivBall1"
-        android:layout_marginTop="13dp"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_below="@+id/tvGameName"
         android:layout_alignLeft="@+id/tvGameName"
-        android:layout_alignStart="@+id/tvGameName"/>
-
-    <TextView
-        android:text="Cash5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
-        android:id="@+id/tvGameName"
-        android:textStyle="normal|bold"
-        android:textSize="18sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:text="$"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvBall3"
-        android:layout_marginRight="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_alignBaseline="@+id/tvBall2"
-        android:layout_alignBottom="@+id/tvBall2"
-        android:layout_alignRight="@+id/imageView4"
-        android:layout_alignEnd="@+id/imageView4"/>
+        android:layout_alignStart="@+id/tvGameName"
+        android:layout_below="@+id/tvGameName"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/ball" />
 
     <ImageView
-        app:srcCompat="@drawable/ball"
         android:id="@+id/ivBall3"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignTop="@+id/imageView4"
+        android:layout_toEndOf="@+id/imageView4"
         android:layout_toRightOf="@+id/imageView4"
-        android:layout_toEndOf="@+id/imageView4"/>
-
-    <TextView
-        android:text="*Date*"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvDate"
-        android:textSize="18sp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
-        android:layout_above="@+id/ivBall1"
-        android:layout_toRightOf="@+id/ivBall3"
-        android:layout_toEndOf="@+id/ivBall3" />
-
-    <TextView
-        android:text="$"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvBall2"
-        android:layout_alignBaseline="@+id/tvBall1"
-        android:layout_alignBottom="@+id/tvBall1"
-        android:layout_toLeftOf="@+id/imageView4"
-        android:layout_toStartOf="@+id/imageView4"
-        android:layout_marginRight="25dp"
-        android:layout_marginEnd="25dp" />
-
-    <TextView
-        android:text="$"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvBall1"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginEnd="17dp"
-        android:layout_alignTop="@+id/ivBall1"
-        android:layout_alignRight="@+id/tvGameName"
-        android:layout_alignEnd="@+id/tvGameName" />
+        app:srcCompat="@drawable/ball" />
 
     <ImageView
-        app:srcCompat="@drawable/ball"
         android:id="@+id/imageView"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignTop="@+id/ivBall3"
+        android:layout_toEndOf="@+id/ivBall3"
         android:layout_toRightOf="@+id/ivBall3"
-        android:layout_toEndOf="@+id/ivBall3" />
+        app:srcCompat="@drawable/ball" />
 
     <TextView
-        android:text="$"
+        android:id="@+id/tvGameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="11dp"
+        android:text="Cash5"
+        android:textSize="18sp"
+        android:textStyle="normal|bold" />
+
+    <TextView
+        android:id="@+id/tvBall3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tvBall2"
+        android:layout_alignBottom="@+id/tvBall2"
+        android:layout_alignEnd="@+id/imageView4"
+        android:layout_alignRight="@+id/imageView4"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:text="$" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ivBall1"
+        android:layout_marginLeft="36dp"
+        android:layout_marginStart="36dp"
+        android:layout_toEndOf="@+id/ivBall3"
+        android:layout_toRightOf="@+id/ivBall3"
+        android:text="*Date*"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/tvBall2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tvBall1"
+        android:layout_alignBottom="@+id/tvBall1"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_toLeftOf="@+id/imageView4"
+        android:layout_toStartOf="@+id/imageView4"
+        android:text="$" />
+
+    <TextView
+        android:id="@+id/tvBall1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/tvGameName"
+        android:layout_alignRight="@+id/tvGameName"
+        android:layout_alignTop="@+id/ivBall1"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginTop="20dp"
+        android:text="$" />
+
+    <TextView
         android:id="@+id/tvBall4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tvBall3"
         android:layout_alignBottom="@+id/tvBall3"
+        android:layout_marginEnd="26dp"
+        android:layout_marginRight="26dp"
         android:layout_toLeftOf="@+id/imageView"
         android:layout_toStartOf="@+id/imageView"
-        android:layout_marginRight="26dp"
-        android:layout_marginEnd="26dp" />
+        android:text="$" />
 
     <TextView
-        android:text="$"
+        android:id="@+id/tvBall5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvBall5"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
         android:layout_alignBaseline="@+id/tvBall4"
         android:layout_alignBottom="@+id/tvBall4"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_toEndOf="@+id/ivBall3"
         android:layout_toRightOf="@+id/ivBall3"
-        android:layout_toEndOf="@+id/ivBall3" />
+        android:text="$" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ivBall2"
+        android:layout_toLeftOf="@+id/ivBall2"
+        android:layout_toStartOf="@+id/ivBall2"
+        android:text="Jackpot: " />
+
+    <TextView
+        android:id="@+id/tvJackpot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ivBall2"
+        android:layout_toLeftOf="@+id/imageView4"
+        android:layout_toStartOf="@+id/imageView4"
+        android:text="jackpot" />
 
 </RelativeLayout>
