--- a/app/src/main/res/layout/powerball_listview.xml
+++ b/app/src/main/res/layout/powerball_listview.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView18"
@@ -62,6 +62,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="12dp"
+        android:background="@android:color/holo_red_dark"
         app:layout_constraintLeft_toRightOf="@+id/imageView18"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
@@ -205,10 +206,10 @@
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="495dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_red_dark"
+        android:orientation="horizontal" />
 
     <TextView
         android:id="@+id/textView3"
