Added random fragment

--- a/app/src/main/res/layout/fragment_pick3.xml
+++ b/app/src/main/res/layout/fragment_pick3.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
-        android:id="@+id/sliding_tabs"
+        android:id="@+id/slidingTabsPick3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed" />
