--- a/app/src/main/res/layout/cash5_listview.xml
+++ b/app/src/main/res/layout/cash5_listview.xml
@@ -137,7 +137,7 @@
         android:text="$" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/jackpotLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/ivBall2"
