--- a/app/src/main/res/layout/mega_millions_listview.xml
+++ b/app/src/main/res/layout/mega_millions_listview.xml
@@ -215,15 +215,15 @@
         android:orientation="horizontal" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/multipilerLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
         android:text="Multiplier:"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/tvGameName" />
 
 </android.support.constraint.ConstraintLayout>
