Generate button on random fragment now works

--- a/app/src/main/res/layout/powerball_listview.xml
+++ b/app/src/main/res/layout/powerball_listview.xml
@@ -212,7 +212,7 @@
         android:orientation="horizontal" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/powerplayLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
