Added recycler view for Lucky For Life.

--- a/app/src/main/res/layout/lucky_for_life_listview.xml
+++ b/app/src/main/res/layout/lucky_for_life_listview.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView7"
@@ -99,113 +99,113 @@
         android:id="@+id/tvBall1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        android:layout_marginStart="12dp"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView3"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+        app:layout_constraintRight_toLeftOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.518"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="15dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView5"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
+        app:layout_constraintRight_toLeftOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.518"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        android:layout_marginStart="18dp"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView6"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
         app:layout_constraintHorizontal_bias="0.222"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
+        app:layout_constraintRight_toLeftOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.518"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="15dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView7"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView6"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.305"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView6"
+        app:layout_constraintRight_toLeftOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.518"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="1dp"
-        tools:layout_constraintBaseline_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView7"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView8"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="1dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView7" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView7"
+        app:layout_constraintRight_toLeftOf="@+id/imageView8"
+        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/tvBall6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="19dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView8"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView8"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         app:layout_constraintHorizontal_bias="0.222"
-        app:layout_constraintVertical_bias="0.518" />
+        app:layout_constraintLeft_toLeftOf="@+id/imageView8"
+        app:layout_constraintRight_toRightOf="@+id/imageView8"
+        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="0.518"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
