--- a/app/src/main/res/layout/mega_millions_listview.xml
+++ b/app/src/main/res/layout/mega_millions_listview.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView13"
@@ -73,146 +73,146 @@
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="53dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="16dp"
         android:text="*Date*"
         android:textSize="18sp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="53dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="16dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvGameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:text="Mega Millions"
         android:textSize="18sp"
         android:textStyle="normal|bold"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="12dp" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView10"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView9" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView9"
+        app:layout_constraintRight_toLeftOf="@+id/imageView10"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView11"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView10" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView10"
+        app:layout_constraintRight_toLeftOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView12"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView11" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView11"
+        app:layout_constraintRight_toLeftOf="@+id/imageView12"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvBall4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/imageView13"
-        android:layout_marginRight="7dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView12" />
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView12"
+        app:layout_constraintRight_toLeftOf="@+id/imageView13"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvBall5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/imageView13"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/imageView13" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="$"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView13"
+        app:layout_constraintRight_toRightOf="@+id/imageView13"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <TextView
         android:id="@+id/tvMegaball"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MB"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="@+id/surfaceView2"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/surfaceView2"
-        app:layout_constraintBottom_toBottomOf="@+id/surfaceView2"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/surfaceView2" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="MB"
+        app:layout_constraintBottom_toBottomOf="@+id/surfaceView2"
+        app:layout_constraintLeft_toLeftOf="@+id/surfaceView2"
+        app:layout_constraintRight_toRightOf="@+id/surfaceView2"
+        app:layout_constraintTop_toTopOf="@+id/surfaceView2"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/tvMultiplier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:text="MU"
-        tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView"
         app:layout_constraintLeft_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp" />
+        tools:layout_constraintBaseline_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline4"
-        app:layout_constraintGuide_begin="72dp"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="72dp" />
 
     <TextView
         android:id="@+id/multipilerLabel"
