Bug fixes to all games recycler adapter

--- a/app/src/main/res/layout/mega_millions_listview.xml
+++ b/app/src/main/res/layout/mega_millions_listview.xml
@@ -200,12 +200,12 @@
         android:id="@+id/tvMultiplier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:text="MU"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
         tools:layout_constraintBaseline_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toRightOf="@+id/multipilerLabel"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/multipilerLabel" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
