--- a/app/src/main/res/layout/lucky_for_life_listview.xml
+++ b/app/src/main/res/layout/lucky_for_life_listview.xml
@@ -39,11 +39,11 @@
         android:id="@+id/imageView2"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline3"
         app:srcCompat="@drawable/ball"
-        tools:layout_editor_absoluteY="55dp" />
+        android:layout_marginTop="-1dp" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -63,18 +63,16 @@
         app:layout_constraintLeft_toRightOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/guideline3"
         app:srcCompat="@drawable/ball"
-        tools:layout_editor_absoluteY="55dp" />
+        android:layout_marginTop="-1dp" />
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="75dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:text="*Date*"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tvGameName"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintRight_creator="1"
