--- a/app/src/main/res/layout/pick4_listview.xml
+++ b/app/src/main/res/layout/pick4_listview.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView4"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toRightOf="@+id/ivBall1"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:srcCompat="@drawable/ball"
@@ -43,17 +43,17 @@
         android:id="@+id/ivBall2"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:srcCompat="@drawable/ball"
-        tools:layout_editor_absoluteY="50dp" />
+        android:layout_marginTop="-1dp" />
 
     <ImageView
         android:id="@+id/ivBall1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toRightOf="@+id/ivBall2"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:srcCompat="@drawable/ball"
@@ -106,7 +106,7 @@
         android:id="@+id/ivBall3"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toRightOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:srcCompat="@drawable/ball"
@@ -133,13 +133,10 @@
         android:layout_height="35dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_green_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintLeft_toRightOf="@+id/ivBall3"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline" />
 
     <TextView
