--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/miFilter"
+        android:icon="@drawable/filter_icon"
+        android:title="Filter"
+        android:visible="false"
+        app:showAsAction="ifRoom"></item>
 </menu>
